kubernetes/apps/longhorn-system/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.rutberg.dev"
    nginx.ingress.kubernetes.io/auth-url: "http://ak-outpost-authentik-embedded-outpost.home-automation.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.rutberg.dev/outpost.goauthentik.io/start?rd=$scheme://$http_host$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-entitlements,X-authentik-email,X-authentik-name,X-authentik-uid"
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
    # # type of authentication
    # nginx.ingress.kubernetes.io/auth-type: basic
    # # prevent the controller from redirecting (308) to HTTPS
    # nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    # # name of the secret that contains the user/password definitions
    # nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # # message to display with an appropriate context why the authentication is required
    # nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required '
    # # custom max body size for file uploading like backing image uploading
    # nginx.ingress.kubernetes.io/proxy-body-size: 10000m

spec:
  ingressClassName: external
  rules:
    - host: longhorn.rutberg.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
